# discord_framework

./: .gitignore  Cargo.toml
modules/album-lookup/: Cargo.toml
modules/album-lookup/src/: lib.rs
modules/autoreact/: Cargo.toml
modules/autoreact/src/: lib.rs
modules/bandcamp/: Cargo.toml
modules/bandcamp/src/: lib.rs
modules/bdays/: Cargo.toml
modules/bdays/src/: lib.rs
modules/forms/: Cargo.toml
modules/forms/src/: complete.rs  lib.rs
modules/google_apis/: Cargo.toml
modules/google_apis/src/: lib.rs  sheets.rs
modules/lastfm/: Cargo.toml
modules/lastfm/src/: aoty.rs  lib.rs  soty.rs
modules/lp/: Cargo.toml
modules/lp/src/: config.rs  lib.rs  lp_creator.rs
modules/pinboard/: Cargo.toml
modules/pinboard/src/: lib.rs
modules/playlist_builder/: Cargo.toml
modules/playlist_builder/src/: lib.rs
modules/polls/: Cargo.toml
modules/polls/src/: lib.rs
modules/quotes/: Cargo.toml
modules/quotes/src/: lib.rs
modules/spotify/: Cargo.toml
modules/spotify/src/: lib.rs
modules/spotify_activity/: Cargo.toml
modules/spotify_activity/src/: lib.rs
modules/sql/: Cargo.toml
modules/sql/src/: lib.rs
modules/tidal/: Cargo.toml
modules/tidal/src/: lib.rs  model.rs
serenity-command/: Cargo.toml
serenity-command-derive/: Cargo.toml
serenity-command-derive/src/: lib.rs
serenity-command-handler/: Cargo.toml
serenity-command-handler/src/: album.rs  bot_management.rs  command_context.rs  db.rs  events.rs  lib.rs
serenity-command-handler/src/modules/: album_lookup.rs  autoreact.rs  bandcamp.rs  bdays.rs  complete.rs  forms.rs  lastfm.rs  lp.rs  mod.rs  pinboard.rs  playlist_builder.rs  polls.rs  quotes.rs  ready_poll.rs  spotify.rs  spotify_activity.rs  sql.rs  tidal.rs
serenity-command-handler/src/modules/forms/: complete.rs  model.rs
serenity-command-handler/src/modules/google_apis/: mod.rs  sheets.rs
serenity-command-handler/src/modules/lastfm/: aoty.rs  model.rs  soty.rs
serenity-command-handler/src/modules/lp/: config.rs  lp_creator.rs
serenity-command-handler/src/modules/tidal/: model.rs
serenity-command/src/: command_data.rs  command_response.rs  lib.rs
serenity-modules/: Cargo.toml
serenity-modules/src/: lib.rs
