[package]
name = "serenity-command-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serenity = { version = "0.12", default-features = false }
syn = { version = "1.0", features = ["full"] }
