[package]
name = "serenity-command-handler"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
    "cache",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rspotify = { version = "0.15", features = ["cli"] }
rspotify-http = "0.15"
rusqlite = { version = "0.37", features = ["chrono"] }
regex = "1.6"
anyhow = "1.0"
serenity-command-derive = { version = "0.1.0", path = "../serenity-command-derive" }
serenity-command = { version = "0.1.0", path = "../serenity-command" }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4.24"
futures = "0.3.27"
image = "0.25"
itertools = "0.14"
serde = "1.0.156"
tokio-stream = "0.1.12"
scraper = "0.18.0"
fallible-iterator = "0.3.0"
rand = "0.8.5"
markov = "1.1.0"
typemap_rev = "0.4"
serde_urlencoded = "0.7.1"
google-sheets4 = "6.0"
urlencoding = "2.1"
serde_json = "1.0"
serde_derive = "1.0"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
http-body-util = "0.1"
