[package]
name = "serenity-command-handler"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde_derive]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.rusqlite]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.regex]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies]
serenity-command = { version = "0.1.0", path = "../serenity-command" }
typemap_rev = "0.4"
