[package]
name = "bdays"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
serenity = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
serenity-command = { path = "../../serenity-command" }
serenity-command-handler = { path = "../../serenity-command-handler" }

fallible-iterator = "0.3.0"
