[package]
name = "forms"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity-command = { path = "../../serenity-command" }
serenity-command-handler = { path = "../../serenity-command-handler" }
spotify = { path = "../spotify" }
album-lookup = { path = "../album-lookup" }
google_apis = { path = "../google_apis" }
spotify_activity = { path = "../spotify_activity" }
serenity = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
itertools = { workspace = true }

fallible-iterator = "0.3.0"
urlencoding = "2.1.3"
