[package]
name = "lp"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
serenity-command = { path = "../../serenity-command" }
serenity-command-handler = { path = "../../serenity-command-handler" }
bandcamp = { path = "../bandcamp" }
lastfm = { path = "../lastfm" }
spotify = { path = "../spotify" }
tidal = { path = "../tidal" }
album-lookup = { path = "../album-lookup" }

serde_urlencoded = "0.7.1"
