[package]
name = "spotify"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity-command = { path = "../../serenity-command" }
serenity-command-handler = { path = "../../serenity-command-handler" }
regex = { workspace = true }
serenity = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

rspotify = { version = "0.16", features = ["cli"] }
